[gd_scene load_steps=17 format=2]

[ext_resource path="res://spriteFrames/platform.tres" type="SpriteFrames" id=1]
[ext_resource path="res://assets/parallax/clouds2.png" type="Texture" id=2]
[ext_resource path="res://assets/parallax/clouds.png" type="Texture" id=3]
[ext_resource path="res://assets/parallax/mountains.png" type="Texture" id=4]
[ext_resource path="res://scenes/plane.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/main.gd" type="Script" id=6]
[ext_resource path="res://scenes/hamster.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/blobble.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 162, 37.5 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ParallaxBackground/sky/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.258824, 0.576471, 0.913725, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "darker1"
tracks/0/type = "value"
tracks/0/path = NodePath("ParallaxBackground/sky/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.258824, 0.576471, 0.913725, 1 ), Color( 0.0862745, 0.34902, 0.627451, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "darker2"
tracks/0/type = "value"
tracks/0/path = NodePath("ParallaxBackground/sky/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.0862745, 0.34902, 0.627451, 1 ), Color( 0.0862745, 0.231373, 0.384314, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "darker3"
tracks/0/type = "value"
tracks/0/path = NodePath("ParallaxBackground/sky/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.0862745, 0.231373, 0.384314, 1 ), Color( 0.0588235, 0.129412, 0.2, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "darkest"
tracks/0/type = "value"
tracks/0/path = NodePath("ParallaxBackground/sky/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.0588235, 0.129412, 0.2, 1 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("platform:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 214, 209 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("platform/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 4, -11.5 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "hover"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("platform:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1.23114, 1.23114, 1.23114 ),
"update": 0,
"values": [ Vector2( 214, 209 ), Vector2( 214, 220 ), Vector2( 214, 209 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("platform/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1.23114, 1.23114, 1.23114 ),
"update": 0,
"values": [ Vector2( 4, -11.5 ), Vector2( 4, -12 ), Vector2( 4, -11.5 ) ]
}

[node name="main" type="Node2D" groups=["planes"]]
script = ExtResource( 6 )

[node name="hamster" parent="." instance=ExtResource( 7 )]
position = Vector2( 212, 142 )

[node name="platform" type="StaticBody2D" parent="."]
position = Vector2( 214, 209 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="platform"]
position = Vector2( 11, 46 )
scale = Vector2( 6.75, 6.75 )
frames = ExtResource( 1 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="platform"]
position = Vector2( 4, -11.5 )
shape = SubResource( 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="sky" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 512, 512 )

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground/sky"]
margin_left = -1323.0
margin_top = -1146.0
margin_right = 1579.0
margin_bottom = 1756.0
color = Color( 0.258824, 0.576471, 0.913725, 1 )

[node name="mountains" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.1, 0.1 )
motion_mirroring = Vector2( 1350, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/mountains"]
position = Vector2( 687, 106 )
scale = Vector2( 21.5625, 21.5625 )
texture = ExtResource( 4 )

[node name="clouds1" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.3, 0.3 )
motion_mirroring = Vector2( 1100, 1150 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/clouds1"]
self_modulate = Color( 1, 1, 1, 0.733333 )
position = Vector2( -2, 0 )
scale = Vector2( 34.625, 34.625 )
texture = ExtResource( 2 )
centered = false

[node name="clouds2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.7, 0.7 )
motion_mirroring = Vector2( 1100, 1150 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/clouds2"]
self_modulate = Color( 1, 1, 1, 0.658824 )
position = Vector2( -2, 0 )
scale = Vector2( 34.625, 34.625 )
texture = ExtResource( 3 )
centered = false

[node name="plane" parent="." instance=ExtResource( 5 )]
position = Vector2( 485, 1075 )

[node name="planeSpawn" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/darker1 = SubResource( 3 )
anims/darker2 = SubResource( 4 )
anims/darker3 = SubResource( 5 )
anims/darkest = SubResource( 6 )

[node name="Timer" type="Timer" parent="."]
wait_time = 59.0
autostart = true

[node name="hover" type="AnimationPlayer" parent="."]
autoplay = "hover"
anims/RESET = SubResource( 7 )
anims/hover = SubResource( 8 )

[node name="blobble" parent="." instance=ExtResource( 8 )]

[connection signal="timeout" from="planeSpawn" to="." method="spawnTime"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="animationFinished"]
[connection signal="timeout" from="Timer" to="." method="onTimeout"]
[connection signal="animation_finished" from="hover" to="." method="hoverDone"]
